# netmiko-script

./: .editorconfig  .gitignore  .pre-commit-config.yaml  ASSUMPTIONS.md  AUDIT_SUMMARY.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALLER_README.md  Makefile  README.md  RELEASE_PROCESS.md  SECURITY.md  SECURITY_REPORT.md  VENV_SETUP.md  WORKLOG.md  build_complete.bat  build_installer.bat  commands.txt  devices.csv  devices_minimal.csv  devices_with_proxy_example.csv  installer.iss  netmiko-collector.spec  netmiko_collector.py  netmiko_collector_old.py  output_20251020_155024.csv  pyproject.toml  requirements-dev.txt  requirements.txt  run_netmiko_collector.py  ssh_config_example.txt  test_autocomplete.py  test_netmiko_collector.py  test_yes_no_defaults.py
.claude/: settings.local.json
.github/: copilot-instructions.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: bandit.yml  claude-code-review.yml  codeql.yml  docs.yml  formatting.yml  ossar.yml  pre-commit.yml  pylint.yml  python-package.yml  release.yml  sbom.yml  security.yml  type-check.yml
docs/: BACKLOG.md  CODEMAP.md  DEPENDENCIES.md  IMPROVEMENT_PLAN.md  NEXT_STEPS.md  OVERVIEW.md  backlog.json  sbom.cyclonedx.json  sbom.spdx.json
docs/rfcs/: RFC-0001-modular-architecture.md
src/netmiko_collector/: __init__.py  cli.py  commands.py  config.py  devices.py  executor.py  models.py  ssh.py  ui.py  utils.py
src/netmiko_collector/formatters/: __init__.py  base.py  csv_formatter.py  html_formatter.py  json_formatter.py  xlsx_formatter.py  yaml_formatter.py
tests/unit/: test_cli.py  test_commands.py  test_config.py  test_devices.py  test_executor.py  test_formatters.py  test_models.py  test_ssh.py  test_ui.py  test_utils.py
